[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Utils/Laser/assets/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://src/Utils/enemyLaser/RandomLaser.gd" type="Script" id=2]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.69281, 0.888889, 1 )
colors = PoolColorArray( 0.923875, 0.923875, 0.923875, 0.792388, 0.870588, 0.870588, 0.870588, 0.647059, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0011363 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 4.0
scale = 0.68
scale_curve = SubResource( 9 )
color = Color( 0.937255, 0.0666667, 0.207843, 1 )
color_ramp = SubResource( 7 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=4]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale_curve = SubResource( 2 )
color = Color( 0.937255, 0.0666667, 0.164706, 1 )

[node name="Laser" type="RayCast2D"]
light_mask = 17
position = Vector2( 227, 394 )
enabled = true
exclude_parent = false
cast_to = Vector2( 3000, 0 )
collision_mask = 10
collide_with_areas = true
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -4.96705, 0 )
scale = Vector2( 1.00824, 0.5 )
points = PoolVector2Array( 4.92647, 0, 593, 0 )
default_color = Color( 0.847059, 0.207843, 0.282353, 1 )
texture_mode = 1
joint_mode = 2
end_cap_mode = 2
sharp_limit = 5.0
round_precision = 5

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticle" type="Particles2D" parent="."]
use_parent_material = true
position = Vector2( -2, 0 )
scale = Vector2( 0.6, 0.6 )
emitting = false
lifetime = 0.3
visibility_rect = Rect2( -1, -1, 2, 20 )
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="collisionParticle" type="Particles2D" parent="."]
position = Vector2( 464, 26 )
scale = Vector2( 0.3, 0.3 )
emitting = false
amount = 11
lifetime = 0.3
visibility_rect = Rect2( -1, -1, 2, 20 )
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="beamParticle" type="Particles2D" parent="."]
visible = false
scale = Vector2( 0.6, 0.6 )
emitting = false
lifetime = 0.3
visibility_rect = Rect2( -1, -1, 2, 20 )
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
